--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,14 @@
 # Site settings
 title: Tim Dalton
-description: > # this means to ignore newlines until "baseurl:"
-  daltontf1212.github.io
+description: daltontf1212.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "daltontf1212.github.io" # the base hostname & protocol for your site
 
 # Build settings
 markdown: kramdown
+remote_theme: songzivong/dark-minima
+
+plugins:
+  - jekyll-remote-theme
+
+
