--- a/_data/site.yml
+++ b/_data/site.yml
@@ -3,4 +3,4 @@ description: If you are on Github, might as well have a Github "blog"
 author:
   name: Your Name Here,
   email: youremailaddress@example.com,
-  url: https://github.com/daltontf/daltontf.github.io
+  url: https://daltontf.github.io/
