--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Build site
         run: |
-          deno run -A https://deno.land/x/lume/ci.ts --location=https://github.com/daltontf/daltontf.github.io
+          deno run -A https://deno.land/x/lume/ci.ts --location=https://daltontf.github.io
 
       - name: Deploy
         uses: crazy-max/ghaction-github-pages@v2.0.1
