--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,29 +1,17 @@
-name: Publish on GitHub Pages
-
-on:
-  push:
-    branches: [ master ]
-
+# On every push this script is executed
+on: push
+name: Build and deploy GH Pages
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    if: github.ref == 'refs/heads/main'
     steps:
-      - name: Clone repository
+      - name: checkout
         uses: actions/checkout@v2
-
-      - name: Setup Deno environment
-        uses: denoland/setup-deno@v1
-        with:
-          deno-version: v1.x
-
-      - name: Build site
-        run: |
-          deno run -A https://deno.land/x/lume/ci.ts --location=https://daltontf.github.io
-
-      - name: Deploy
-        uses: crazy-max/ghaction-github-pages@v2.0.1
-        with:
-          build_dir: _site
+      - name: build_and_deploy
+        uses: shalzz/zola-deploy-action@v0.14.1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # Target branch
+          PAGES_BRANCH: gh-pages
+          # Provide personal access token
+          TOKEN: ${{ secrets.TOKEN }}
