--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,3 +14,4 @@ jobs:
           PAGES_BRANCH: gh-pages
           # Provide personal access token
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TOKEN: $GITHUB_ACTOR:${{ secrets.GITHUB_TOKEN }}
