--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,8 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v3.2.0
+      - name: mark directories safe
+        run: /usr/bin/git config --global --add safe.directory /github/workspace
       - name: build_and_deploy
         uses: shalzz/zola-deploy-action@v0.16.1
         env:
