--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,11 +7,10 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v3.2.0
-      - name: mark directories safe
-        run: /usr/bin/git config --global --add safe.directory '*'
       - name: build_and_deploy
         uses: shalzz/zola-deploy-action@v0.16.1
         env:
+          GIT_TEST_DEBUG_UNSAFE_DIRECTORIES: true
           # Target branch
           PAGES_BRANCH: gh-pages
           # Provide personal access token
