--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,11 +7,10 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v3.2.0
-      - name: prevent fetch
-        run: export BUILD_THEMES=false
       - name: build_and_deploy
         uses: shalzz/zola-deploy-action@master
         env:
+          BUILD_THEMES: false
           # Target branch
           PAGES_BRANCH: gh-pages
           # Provide personal access token
